--- a/yazeed/profil.css
+++ b/yazeed/profil.css
@@ -1,18 +1,13 @@
-/* Reset & Base */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, sans-serif;
-}
-
-html, body {
-  height: 100%;
+  font-family: "Segoe UI", sans-serif;
 }
 
 body {
   display: flex;
-  background-color: #f1f2f6;
+  background-color: #f5f8fa;
 }
 
 /* Sidebar */
