--- a/yazeed/Subject.css
+++ b/yazeed/Subject.css
@@ -3,23 +3,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-
-html, body {
-  height: 100%;
-  background-color: #f0f4ff;
+  font-family: "Segoe UI", sans-serif;
 }
 
 body {
   display: flex;
-}
-
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  width: 100%;
+  background-color: #f5f8fa;
 }
 
 /* Sidebar */
