--- a/yazeed/Attendance.css
+++ b/yazeed/Attendance.css
@@ -63,7 +63,14 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-decoration: none;
+  transition: color 0.3s ease;
 }
+
+.user_name:hover {
+  color: #1abc9c; /* نفس لون hover لأزرار السايدبار */
+}
+
 
 .nav {
   display: flex;
@@ -73,8 +80,10 @@ body {
 }
 
 .nav-btn {
-  background-color: transparent;
-  color: #fff;
+  display: block;
+  background: none;
+  color: white;
+  text-decoration: none;
   border: none;
   padding: 10px;
   text-align: left;
@@ -82,16 +91,14 @@ body {
   cursor: pointer;
   border-radius: 5px;
   transition: all 0.3s ease;
-  display: flex;
-  align-items: center;
-  gap: 8px;
 }
 
 .nav-btn:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-  color: #ffd369;
-  transform: translateX(4px);
+  background-color: #1abc9c;
+  transform: translateX(5px);
+  color: #fff;
 }
+
 
 .nav-btn i {
   font-style: normal;
@@ -208,4 +215,14 @@ table tbody tr:hover {
 }
 strong{
   color: #000;
+}
+.topbar-link {
+  text-decoration: none;
+  color: #000;
+  font-weight: 500;
+  transition: color 0.3s;
+}
+
+.topbar-link:hover {
+  color: #1abc9c;
 }
