--- a/yazeed/contect.css
+++ b/yazeed/contect.css
@@ -51,7 +51,14 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-decoration: none;
+  transition: color 0.3s ease;
 }
+
+.user_name:hover {
+  color: #1abc9c; 
+}
+
 
 .nav {
   display: flex;
@@ -61,8 +68,10 @@ body {
 }
 
 .nav-btn {
-  background-color: transparent;
-  color: #fff;
+  display: block;
+  background: none;
+  color: white;
+  text-decoration: none;
   border: none;
   padding: 10px;
   text-align: left;
@@ -70,16 +79,14 @@ body {
   cursor: pointer;
   border-radius: 5px;
   transition: all 0.3s ease;
-  display: flex;
-  align-items: center;
-  gap: 8px;
 }
 
 .nav-btn:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-  color: #ffd369;
-  transform: translateX(4px);
+  background-color: #1abc9c;
+  transform: translateX(5px);
+  color: #fff;
 }
+
 
 .nav-btn .new {
   background: red;
@@ -92,7 +99,7 @@ body {
 
 .topbar {
   position: fixed;
-  left: 220px;
+  left:200px;
   right: 0;
   top: 0;
   height: 60px;
@@ -190,4 +197,14 @@ body {
 
 strong {
   color: #000;
+}
+.topbar-link {
+  text-decoration: none;
+  color: #000;
+  font-weight: 500;
+  transition: color 0.3s;
+}
+
+.topbar-link:hover {
+  color: #1abc9c;
 }
