--- a/yazeed/grades2.css
+++ b/yazeed/grades2.css
@@ -10,7 +10,6 @@ body {
   background-color: #f5f8fa;
 }
 
-/* Sidebar */
 .sidebar {
   width: 200px;
   background: #2e2e2e;
@@ -44,15 +43,7 @@ body {
   flex-shrink: 0;
 }
 
-.user_name {
-  font-size: 14px;
-  font-weight: 500;
-  color: white;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
+.user
 .nav {
   display: flex;
   flex-direction: column;
@@ -61,8 +52,10 @@ body {
 }
 
 .nav-btn {
-  background-color: transparent;
-  color: #fff;
+  display: block;
+  background: none;
+  color: white;
+  text-decoration: none;
   border: none;
   padding: 10px;
   text-align: left;
@@ -70,16 +63,14 @@ body {
   cursor: pointer;
   border-radius: 5px;
   transition: all 0.3s ease;
-  display: flex;
-  align-items: center;
-  gap: 8px;
 }
 
 .nav-btn:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-  color: #ffd369;
-  transform: translateX(4px);
+  background-color: #1abc9c;
+  transform: translateX(5px);
+  color: #fff;
 }
+
 
 .nav-btn .new {
   background: red;
@@ -210,4 +201,14 @@ td {
   .topbar {
     left: 0;
   }
+}
+.topbar-link {
+  text-decoration: none;
+  color: #000;
+  font-weight: 500;
+  transition: color 0.3s;
+}
+
+.topbar-link:hover {
+  color: #1abc9c;
 }
